# splurge-test-namer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  requirements-dev.txt
.github/: copilot-instructions.md
.github/badges/: coverage.json
.github/workflows/: ci-py-3.10.yml  ci-py-3.11.yml  ci-py-3.12.yml  ci-py-3.13.yml  ci-reusable.yml  coverage-commit.yml  python-ci.yml
docs/: README-DETAILS.md
docs/plans/: plan-import-scan-2025-sep-15.md
splurge_test_namer/: __init__.py  __main__.py  cli.py  exceptions.py  namer.py  parser.py  util_helpers.py
tests/e2e/: test_cli_0002.py  test_cli_0003.py  test_cli_e2e.py
tests/integration/: test_end_to_end_naming.py  test_namer_0001.py
tests/unit/: test_aggregate_sentinels.py  test_apply_renames.py  test_cli_0001.py  test_cli_0004.py  test_cli_0005.py  test_cli_0006.py  test_cli_0007.py  test_cli_0008.py  test_cli_exceptions_utils_0001.py  test_exceptions_namer_0002.py  test_exceptions_namer_0003.py  test_exceptions_namer_0004.py  test_exceptions_namer_0005.py  test_exceptions_parser_0002.py  test_exceptions_parser_0003.py  test_misc_0001.py  test_namer_0002.py  test_namer_0003.py  test_namer_0005.py  test_namer_and_parser_edges2.py  test_namer_exclude_0001.py  test_namer_parser_0001.py  test_namer_parser_0002.py  test_namer_slug_and_build.py  test_parser_0002.py  test_parser_0004.py  test_parser_0005.py  test_parser_0007.py  test_parser_0008.py  test_parser_0009.py  test_parser_0011.py  (+12 more)
tools/: rename_tests_by_sentinels.py  update_coverage_badge.py
